[package]
name = "torrent-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
reqwest = "0.12.23"
serde = {version = "1.0.228", features = ["derive"] }
serde_bencode = "0.2.4"
serde_bytes = "0.11.19"
sha1 = "0.10.6"
tokio = {version = "1.47.1", features = ["full"] }
url = "2.5.7"
